<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Emergency Call</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loButton">SEND ALERT !! </string>
    <string name="phone_label1">Set Phone Number(For calling):</string>
    <string name="phone_label2">Set Phone Number(For SMS):</string>
    <string name="sms_label">Set SMS Message:</string>
    <string name="send_sms_label">Send SMS</string>
    <string name="email">Set Email</string>

</resources>
