<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.emergencycall.android.MainActivity" >

    <TextView
        android:id="@+id/textViewPhoneNo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_label1" />

    <EditText
        android:id="@+id/editTextPhoneNo1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editTextSMS"
        android:layout_below="@+id/textViewPhoneNo"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:inputType="phone" 
        android:textColor="#757575"/>
    
    <TextView
        android:id="@+id/textViewPhoneNo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPhoneNo1"
        android:layout_below="@+id/editTextPhoneNo1"
        android:layout_marginTop="22dp"
        android:text="@string/phone_label2" />
    <EditText
        android:id="@+id/editTextPhoneNo2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewSMS"
        android:layout_alignLeft="@+id/textViewSMS"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:inputType="phone" 
        android:textColor="#757575">

        <requestFocus />
    </EditText>

    

    <Button
        android:id="@+id/LocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextSMS"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editTextSMS"
        android:layout_marginBottom="35dp"
        android:text="@string/loButton" 
        android:background="#2196F3"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/SetInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LocationButton"
        android:layout_alignLeft="@+id/LocationButton"
        android:layout_alignRight="@+id/LocationButton"
        android:layout_marginBottom="8dp"
        android:text="Set Information" 
        android:background="#2196F3"
         android:textColor="#000000"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/SetInfo"
        android:layout_alignLeft="@+id/SetInfo"
        android:layout_alignRight="@+id/SetInfo"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:inputType="textEmailAddress" 
        android:textColor="#757575"/>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextEmail"
        android:layout_alignLeft="@+id/editTextEmail"
        android:layout_marginBottom="8dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextSMS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewEmail"
        android:layout_alignLeft="@+id/textViewSMS"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:inputType="textMultiLine" 
        android:textColor="#757575"/>

    <TextView
        android:id="@+id/textViewSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextSMS"
        android:layout_alignLeft="@+id/textViewPhoneNo"
        android:layout_marginBottom="10dp"
        android:text="@string/sms_label" />

    

</RelativeLayout>